chore: import repository https://github.com/ajishasb/sample2.git
this commit will trigger a pipeline to [generate the CI/CD configuration](https://jenkins-x.io/v3/about/how-it-works/#importing--creating-quickstarts) which will create a second commit on this Pull Request before it auto merges

--- a/.jx/gitops/source-config.yaml
+++ b/.jx/gitops/source-config.yaml
@@ -9,6 +9,7 @@ spec:
     providerKind: github
     repositories:
     - name: sample1
+    - name: sample2
     - name: sampleproject
     scheduler: in-repo
   slack:
